mmc: Update and remove functions for the kernel and rootfs
Add support for update and remove of eMMC images.

The BMC kerenl and rootfs can be flashed directly to the device since
they are a filesystem file. The kernel contains the fitImage file.
The image-rofs and image-kernel are a compressed zstd file:
https://gerrit.openbmc-project.xyz/c/openbmc/meta-phosphor/+/30781

Tested: Verified the kernel file and non-running device were updated.

Change-Id: Ic983dec1df389d56f11f12dc2e82589d1a2b9dcc
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>

--- a/meson.build
+++ b/meson.build
@@ -49,6 +49,7 @@ conf.set_quoted('PERSIST_DIR', '/var/lib/phosphor-bmc-code-mgmt/')
 # Supported BMC layout types
 conf.set('STATIC_LAYOUT', get_option('bmc-layout').contains('static'))
 conf.set('UBIFS_LAYOUT', get_option('bmc-layout').contains('ubi'))
+conf.set('MMC_LAYOUT', get_option('bmc-layout').contains('mmc'))
 
 # Configurable features
 conf.set('HOST_BIOS_UPGRADE', get_option('host-bios-upgrade').enabled())
@@ -129,6 +130,11 @@ elif get_option('bmc-layout').contains('mmc')
         'mmc/flash.cpp',
         'mmc/item_updater_helper.cpp'
     )
+
+    unit_files += [
+        'mmc/obmc-flash-mmc@.service.in',
+        'mmc/obmc-flash-mmc-remove@.service.in',
+    ]
 endif
 
 if get_option('host-bios-upgrade').enabled()
